force-app/main/default/objects/AsyncJob__c/fields/AreExecutionLimitsReached__c.field-meta.xml
<CustomField>
    <fullName>AreExecutionLimitsReached__c</fullName>
    <description>Indicates if the ASyncJob can be executed again</description>
    <formula>IF( IsRecursive__c, false,  ExecutionCount__c &gt;=  MaxExecutionCount__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Are Execution Limits Reached</label>
    <type>Checkbox</type>
</CustomField>