force-app/main/default/objects/AsyncJob__c/fields/ExecutionCount__c.field-meta.xml
<CustomField>
    <fullName>ExecutionCount__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Represents the number of executions done by specific AsyncJob</description>
    <label>Execution Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>