force-app/main/default/objects/AsyncJob__c/fields/IsRecursive__c.field-meta.xml
<CustomField>
    <fullName>IsRecursive__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If true runs until the AsyncJobResult returns as Completed</description>
    <label>Is Recursive</label>
    <type>Checkbox</type>
</CustomField>