force-app/main/default/objects/AsyncJob__c/fields/LastExecutionStatus__c.field-meta.xml
<CustomField>
    <fullName>LastExecutionStatus__c</fullName>
    <description>Represents the last execution statu</description>
    <label>Last Execution Status</label>
    <length>255</length>
    <type>Text</type>
</CustomField>