force-app/main/default/objects/AsyncJob__c/fields/LastExecutionTime__c.field-meta.xml
<CustomField>
    <fullName>LastExecutionTime__c</fullName>
    <description>Represents the last execution time, no matter the status of execution</description>
    <label>Last Execution Time</label>
    <type>DateTime</type>
</CustomField>