force-app/main/default/objects/AsyncJob__c/fields/MaxExecutionCount__c.field-meta.xml
<CustomField>
    <fullName>MaxExecutionCount__c</fullName>
    <defaultValue>5</defaultValue>
    <description>Represents the maximum number of executions allowed, unless it is a recursive AsyncJob</description>
    <label>Max Execution Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>