force-app/main/default/objects/AsyncJob__c/fields/Params__c.field-meta.xml
<CustomField>
    <fullName>Params__c</fullName>
    <inlineHelpText>The params that should be initialized in AsyncJob during execution</inlineHelpText>
    <label>Params</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>