force-app/main/default/objects/AsyncJob__c/fields/ParentJobId__c.field-meta.xml
<CustomField>
    <fullName>ParentJobId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>If the AsyncJob was created in context of another AsyncJob the field is populated</description>
    <label>Parent Job Id</label>
    <referenceTo>AsyncJob__c</referenceTo>
    <relationshipName>AsyncJobs</relationshipName>
    <type>Lookup</type>
</CustomField>