force-app/main/default/objects/AsyncJob__c/fields/ResultLog__c.field-meta.xml
<CustomField>
    <fullName>ResultLog__c</fullName>
    <description>Result log for each execution based on the AsyncJobResult</description>
    <label>Result Log</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>