force-app/main/default/objects/AsyncJob__c/fields/RetryInterval__c.field-meta.xml
<CustomField>
    <fullName>RetryInterval__c</fullName>
    <defaultValue>15</defaultValue>
    <description>Represents the delay between the next execution if needed</description>
    <label>Retry Interval</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>