force-app/main/default/objects/AsyncJob__c/fields/ScheduleTime__c.field-meta.xml
<CustomField>
    <fullName>ScheduleTime__c</fullName>
    <defaultValue>NOW()</defaultValue>
    <description>The time when the AsyncJob should be executed</description>
    <label>Schedule Time</label>
    <required>true</required>
    <type>DateTime</type>
</CustomField>