force-app/main/default/objects/AsyncJob__c/listViews/ALL_Active.listView-meta.xml
<ListView>
    <fullName>ALL_Active</fullName>
    <columns>NAME</columns>
    <columns>JobName__c</columns>
    <columns>ScheduleTime__c</columns>
    <columns>Status__c</columns>
    <columns>ExecutionCount__c</columns>
    <columns>LastExecutionStatus__c</columns>
    <columns>LastExecutionTime__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Queued,In Progress</value>
    </filters>
    <label>All - Active</label>
</ListView>