force-app/main/default/objects/AsyncJob__c/listViews/All_Failed.listView-meta.xml
<ListView>
    <fullName>All_Failed</fullName>
    <columns>NAME</columns>
    <columns>Job_Name__c</columns>
    <columns>ScheduleTime__c</columns>
    <columns>Status__c</columns>
    <columns>ExecutionCount__c</columns>
    <columns>LastExecutionStatus__c</columns>
    <columns>LastExecutionTime__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Failed</value>
    </filters>
    <label>All - Failed</label>
</ListView>